--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,5 +1,18 @@
 .NavBar {
-    background-color: black; 
+    background-color: rgba(0, 0, 0, 0.5);
     color: white; 
     min-height: 100vh; 
+  
   }
+
+  .nav-item{
+    padding-left: 20px;
+  }
+
+
+  .nav-link:hover {
+   
+    font-weight: bold;  
+    transform: translateY(-3px);
+    transition: all 0.3s ease;
+}
