--- a/src/pages/ContactPage/ContactPage.css
+++ b/src/pages/ContactPage/ContactPage.css
@@ -28,3 +28,9 @@
 .form-control::placeholder {
     color: black !important;
 }
+
+.success-msg{
+    font-size: 20px;
+    font-weight: bold;
+    color: #333
+}
