--- a/src/pages/ContactPage/ContactPage.css
+++ b/src/pages/ContactPage/ContactPage.css
@@ -34,3 +34,18 @@
     font-weight: bold;
     color: #333
 }
+
+@media (max-width: 768px) {
+    .custom-btn {
+      width: 100% !important; /* take full width */
+      font-size: 18px !important; /* slightly reduce the font-size for better fit */
+      padding-left: 15px;
+      padding-right: 15px;
+    }
+  }
+  @media (max-width: 768px) {
+    .success-msg {
+      font-size: 18px; 
+    }
+  }
+  
