--- a/src/pages/ContactPage/ContactPage.css
+++ b/src/pages/ContactPage/ContactPage.css
@@ -37,8 +37,8 @@
 
 @media (max-width: 768px) {
     .custom-btn {
-      width: 100% !important; /* take full width */
-      font-size: 18px !important; /* slightly reduce the font-size for better fit */
+      width: 100% !important; 
+      font-size: 18px !important; 
       padding-left: 15px;
       padding-right: 15px;
     }
@@ -48,4 +48,8 @@
       font-size: 18px; 
     }
   }
-  
+  @media (max-width: 768px) {
+    .form-label {
+      font-size: 20px; 
+    }
+  }
