--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -1,27 +1,15 @@
 body, html {
+  height: 100%;
   margin: 0;
   padding: 0;
-  height: 100%;
-  width: 100%;
-  position: relative;
+}
+body {
+  background: linear-gradient(rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.6)), url('https://i.imgur.com/r1sR32S.png') repeat-y center top fixed;
+  margin: 0;
+  padding: 0;
 }
 
-body::before {
-  content: '';
-  background: url('https://i.imgur.com/r1sR32S.png') no-repeat center center fixed; 
-  background-position: center top;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  opacity: 0.5;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  position: absolute;
-  z-index: -1;     
-}
+
 
 .App {
   text-align: center;
