--- a/src/pages/MyWork/MyWork.css
+++ b/src/pages/MyWork/MyWork.css
@@ -1,8 +1,22 @@
-.img-fluid {
-    width: 100%;    
-    max-height: 380px; 
-    object-fit: cover; 
-    padding: 70px;
-    padding-top: 50px;
-    cursor: zoom-in;
-}
+.container {
+    overflow: visible;
+  }
+  
+  .container img {
+    width: 350px;
+    height: 350px;
+    transition: transform 0.3s;
+    position: relative; /* Create a new stacking context */
+  }
+  
+  .container img:hover {
+    transform: scale(1.5);
+    z-index: 1;
+  }
+  
+  .image-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 10px;
+  }
+  
