--- a/src/pages/HomePage/Home.css
+++ b/src/pages/HomePage/Home.css
@@ -31,7 +31,7 @@ img {
     height: auto;
     transition: transform 0.3s ease;
     border-radius: 15px;
-    filter: hue-rotate(210deg);
+    /* filter: hue-rotate(210deg); */
 }
 
 .nav-item:hover {
