--- a/src/pages/MyWork/MyWork.css
+++ b/src/pages/MyWork/MyWork.css
@@ -22,11 +22,12 @@
   
   @media (max-width: 768px) {
     .container img {
-      width: 100%; /* Use full width for phone screens */
-      height: auto; /* Allow the aspect ratio to be maintained */
+        width: 100px;
+        height: 100px;
+      
     }
   
     .image-grid {
-      grid-template-columns: repeat(auto-fill, minmax(100%, 1fr)); /* Adjust columns for phone screens */
+      grid-template-columns: repeat(5, 1fr); /* Adjust columns for phone screens */
     }
   }
