--- a/src/pages/MyWork/MyWork.css
+++ b/src/pages/MyWork/MyWork.css
@@ -26,7 +26,11 @@
         height: 100px;
       
     }
-  
+    .container img:hover {
+        transform: scale(5);
+       
+      }
+      
     .image-grid {
       grid-template-columns: repeat(5, 1fr); /* Adjust columns for phone screens */
     }
