--- a/src/pages/ContactPage/ContactPage.css
+++ b/src/pages/ContactPage/ContactPage.css
@@ -23,15 +23,17 @@
     background-color: transparent !important; 
     color: black !important; 
     border: 1px solid black !important; 
-}
+    font-family: 'Titan One', sans-serif !important;
 
-.form-control::placeholder {
-    color: black !important;
+}
+.custom{
+  font-family: 'Titan One', sans-serif !important;
 }
 
 .success-msg{
     font-size: 20px;
     font-weight: bold;
+    font-family: 'Titan-One', sans-serif;
     color: #333
 }
 
@@ -54,3 +56,4 @@
       color: black !important;
     }
   }
+
