--- a/src/pages/HomePage/Home.css
+++ b/src/pages/HomePage/Home.css
@@ -1,13 +1,13 @@
-@keyframes paint {
+/* @keyframes paint {
     from {
         clip-path: inset(0 100% 0 0); /* right side is at 100%, effectively hiding the element */
-        margin-top: 30px;
+        /* margin-top: 30px;
     }
     to {
-        clip-path: inset(0 0% 0 0);  /* right side is at 0%, showing the entire element */
+        clip-path: inset(0 0% 0 0);  right side is at 0%, showing the entire element
         margin-top: 30px;
     }
-}
+} */
 body.HomePage {
   background: linear-gradient(rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.6)), url('https://i.imgur.com/RktezNS.jpg') no-repeat center top fixed;
   background-size: cover;
@@ -17,13 +17,18 @@ body.HomePage {
 }
 
 
+.content-container {
+  display: flex; 
+  align-items: center; 
+  justify-content: space-between; 
+}
+
 h1 {
-    font-family: 'Pacifico', cursive; /* Here I used 'Pacifico' as an example, but you can use any cursive font */
     position: relative;
+    font-family: 'Eater', sans-serif;
     color: black;
     overflow: hidden;
-    white-space: nowrap; /* This will keep the text in a single line while animating */
-    /* animation: paint 3s forwards; */
+    font-size: 90px !important;
 }
 
 img {
@@ -31,7 +36,6 @@ img {
     height: auto;
     transition: transform 0.3s ease;
     border-radius: 15px;
-    /* filter: hue-rotate(210deg); */
 }
 
 .nav-item:hover {
@@ -43,7 +47,8 @@ img {
   color: black; /* Set the color to black */
 }
 .nav-item {
-  padding: 30px; /* Adjust the margin as needed */
+  padding: 30px;
+  width: 180%;
 }
 
 @media (max-width: 768px) {
