--- a/src/pages/HomePage/Home.css
+++ b/src/pages/HomePage/Home.css
@@ -29,6 +29,8 @@ h1 {
     color: black;
     overflow: hidden;
     font-size: 90px !important;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+
 }
 
 img {
