--- a/src/pages/ContactPage/ContactPage.css
+++ b/src/pages/ContactPage/ContactPage.css
@@ -1,59 +1,68 @@
+body {
+  background-color: #1e1e1e;
+  color: #fff;
+}
 
 .custom-btn {
-    color: black !important;
-    background-color: transparent !important;
-    transition: background-color 0.3s ease, color 0.3s ease !important;
-    width: 500px !important;
-    font-size: 20px !important;
+  color: #fff;
+  background-color: #230134;
+  border: none;
+  transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
+  width: 500px;
+  font-size: 20px;
+  text-shadow: 2px 2px 4px #000;
 }
 
 .custom-btn:hover {
-    background-color: black !important;
-    color: white !important;
+  background-color: #230134;
+  color: #fff;
+  box-shadow: 0px 0px 10px 2px #230134;
+}
+
+.container {
+  font-family: 'Creepster', cursive !important;
 }
 
 .custom-btn:focus {
-    box-shadow: none !important;
-    outline: none !important;
-    border: 1px solid black !important;
+  box-shadow: 0px 0px 12px 3px #230134;
+  outline: none;
 }
-
 
 .form-control {
-    background-color: transparent !important; 
-    color: black !important; 
-    border: 1px solid black !important; 
-    font-family: 'Titan One', sans-serif !important;
-
-}
-.custom{
-  font-family: 'Titan One', sans-serif !important;
+  background-color: transparent;
+  color: #fff;
+  border: 1px solid #230134;
+  font-family: 'Creepster', cursive !important;
+  box-shadow: 0px 0px 5px 1px #230134;
 }
 
-.success-msg{
-    font-size: 20px;
-    font-weight: bold;
-    font-family: 'Titan-One', sans-serif;
-    color: #333
+.custom {
+  font-family: 'Creepster', cursive !important;
+  text-shadow: 1px 1px 2px #000;
+}
+
+.success-msg {
+  font-size: 30px;
+  font-weight: bold;
+  font-family: 'Creepster', cursive !important;
+  color: #141117;
+  text-shadow: 1px 1px 2px #000;
 }
 
 @media (max-width: 768px) {
-    .custom-btn {
-      width: 100% !important; 
-      font-size: 18px !important; 
-      padding-left: 15px;
-      padding-right: 15px;
-    }
-  }
-  @media (max-width: 768px) {
-    .success-msg {
-      font-size: 18px; 
-    }
-  }
-  @media (max-width: 768px) {
-    .form-label {
-      font-size: 20px; 
-      color: black !important;
-    }
+  .custom-btn {
+    width: 100%;
+    font-size: 18px;
+    padding-left: 15px;
+    padding-right: 15px;
   }
 
+  .success-msg {
+    font-size: 18px;
+  }
+
+  .form-label {
+    font-size: 20px;
+    color: #fff;
+  }
+}
